--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,3 @@
-url: "https://educacionadistancia.juntadeandalucia.es/centros/sevilla/mod/quiz/view.php?id=472519"
-titulo: "Prueba de DHCP"
+url: "https://educacionadistancia.juntadeandalucia.es/centros/sevilla/mod/quiz/view.php?id=472193"
+titulo: "Prueba de IAW"
 color_banner: "#002b50"
