--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,3 @@
-url: "https://educacionadistancia.juntadeandalucia.es/centros/sevilla/mod/quiz/view.php?id=525261"
-titulo: "Prueba de IAW"
+url: "https://educacionadistancia.juntadeandalucia.es/centros/sevilla/mod/quiz/view.php?id=527718"
+titulo: "Prueba de SRI"
 color_banner: "#002b50"
