Change title from 'Prueba de SRI' to 'Prueba de IAW'

--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,3 @@
 url: "https://educacionadistancia.juntadeandalucia.es/centros/sevilla/mod/quiz/view.php?id=544849"
-titulo: "Prueba de SRI"
+titulo: "Prueba de IAW"
 color_banner: "#002b50"
